# fc_attitudeai

./: README.md  configure.ac
ai/: ChangeLog  Makefile.am  autogen.sh
ai/attitude/: Makefile.am  README  aivariant.c  aivariant.h  attitudeai.c  attitudeai.h  leaderrules.c  leaderrules.h  utils.c  utils.h
attitude/: Makefile.am  aivariant.h  utils.h
data/: attitude.serv
data/attitude/: Makefile  Makefile.am  Makefile.in  aivariant.ruleset  game.ruleset  script.lua
