## Process this file with automake to produce Makefile.in

## Override automake so that "make install" puts these in proper place:
pkgdatadir = $(datadir)/$(PACKAGE)/attitude

pkgdata_DATA =			\
  ai_effects.ruleset \
  aivariant.ruleset \
	buildings.ruleset	\
	cities.ruleset		\
	default.lua \
	effects.ruleset		\
	game.ruleset		\
	governments.ruleset	\
	nations.ruleset		\
	script.lua		\
	styles.ruleset		\
	techs.ruleset		\
	terrain.ruleset		\
	units.ruleset

EXTRA_DIST = $(pkgdata_DATA)
